force-app/main/default/objects/mkto_si__Get_Method_Argus__c/mkto_si__Get_Method_Argus__c.object-meta.xml
<CustomObject>
    <label>GetMethodArgu</label>
    <nameField>
        <label>GetMethodArgu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GetMethodArgus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>