force-app/main/default/objects/mkto_si__Get_Method_Argus__c/fields/mkto_si__ArguName__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ArguName__c</fullName>
    <description>This would be the name of the long argu stored in sObject</description>
    <label>ArguName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>