force-app/main/default/objects/mkto_si__Get_Method_Argus__c/fields/mkto_si__ArguValue__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ArguValue__c</fullName>
    <description>This would be the argument value stored passed. Since Get method can&#39;t hold such long argu in IE 7/8. They are firstly stored in sObject and then retrieved in controller.</description>
    <label>ArguValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>