force-app/main/default/objects/mkto_si__Get_Method_Argus__c/fields/mkto_si__ContactType__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ContactType__c</fullName>
    <label>ContactType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>