force-app/main/default/objects/mkto_si__Get_Method_Argus__c/fields/mkto_si__Key__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Key__c</fullName>
    <description>This would be the identifier of the get call.</description>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>